[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Kenney/Player/Female/Poses/female_walk1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Kenney/Player/Female/Poses/female_stand.png" type="Texture" id=3]
[ext_resource path="res://Assets/Kenney/Player/Female/Poses/female_walk2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Kenney/Player/Female/Poses/female_jump.png" type="Texture" id=5]
[ext_resource path="res://Assets/Kenney-Fonts/Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Kenney-Fonts/Fonts/Kenney Mini Square Mono.ttf" type="DynamicFontData" id=8]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "stand",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 53.0
height = 43.3333

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.309804, 0.462745, 0.380392, 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.192157, 0.411765, 0.34902, 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.192157, 0.411765, 0.34902, 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.192157, 0.411765, 0.34902, 1 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
z_index = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 3.07292, -8.69348 )
scale = Vector2( 1.609, 1.6 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, -9.33334 )
scale = Vector2( 1.6, 1.6 )
frames = SubResource( 10 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.66667, 13.3333 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 3.33333, -133.333 )
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = true
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.72
drag_margin_right = 0.33
drag_margin_bottom = 0.27
editor_draw_drag_margin = true

[node name="Skorumuz" type="Label" parent="."]
margin_left = -26.6667
margin_top = -128.0
margin_right = 36.3333
margin_bottom = -75.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="GameOver" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="UI/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UI/GameOver/CenterContainer"]
margin_left = 212.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 400 )
custom_styles/panel = SubResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameOver/CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOver/CenterContainer/Panel/HBoxContainer"]
margin_left = 129.0
margin_right = 471.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 342.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 4 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Label2" type="Label" parent="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 342.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 12 )
text = "SKOR"
align = 1
valign = 1

[node name="btn_restart" type="Button" parent="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 342.0
margin_bottom = 261.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 13 )
text = "RESTART"

[node name="btn_goToMenu" type="Button" parent="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 301.0
margin_right = 342.0
margin_bottom = 351.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 14 )
text = "MAIN MENU
"

[node name="Finished" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="UI/Finished"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UI/Finished/CenterContainer"]
margin_left = 212.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 400 )
custom_styles/panel = SubResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Finished/CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Finished/CenterContainer/Panel/HBoxContainer"]
margin_left = 129.0
margin_right = 471.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 3.0
margin_right = 342.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 4 )
text = "SUCCESFUL"
align = 1
valign = 1

[node name="Label2" type="Label" parent="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 342.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 12 )
text = "SKOR"
align = 1
valign = 1

[node name="btn_next_level" type="Button" parent="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 342.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 15 )
text = "NEXT LEVEL"

[node name="btn_restart" type="Button" parent="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 342.0
margin_bottom = 306.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 13 )
text = "RESTART"

[node name="btn_goToMenu" type="Button" parent="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 342.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 14 )
text = "MAIN MENU
"

[connection signal="pressed" from="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="UI/GameOver/CenterContainer/Panel/HBoxContainer/VBoxContainer/btn_goToMenu" to="." method="_on_btn_goToMenu_pressed"]
[connection signal="pressed" from="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer/btn_next_level" to="." method="_on_btn_next_level_pressed"]
[connection signal="pressed" from="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="UI/Finished/CenterContainer/Panel/HBoxContainer/VBoxContainer/btn_goToMenu" to="." method="_on_btn_goToMenu_pressed"]
